<resources>
    <string name="app_name">Focus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_sessions">Sessions</string>
    <string name="menu_settings">Settings</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="your_stats">Your Stats</string>
    <string name="create_session">Create New Session</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="field_session_goal">What are you trying to finish today?</string>
    <string name="play_relaxing_music">Play Relaxing Music</string>
    <string name="rain">Rain</string>
    <string name="city_traffic">City Traffic</string>
    <string name="waterfall">Waterfall</string>
    <string name="nature_forest">Nature Forest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="session">Session</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="long_break">Long Break</string>
    <string name="short_break">Short Break</string>
    <string name="finish_session">Finish Session</string>
    <string name="task_list">Task List</string>
    <string name="add_new_task">Add new task</string>
    <string name="time_spent">Time spent:</string>
    <string name="session_rating">Session Rating</string>
    <string name="session_review">Session Review</string>
    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="_finish_session_confirmation">Are you sure you want to finish this session?</string>
    <string name="confirm">Confirm</string>
    <string name="field_session_review">How do you feel about this session?</string>
    <string name="field_session_rating">From 1 to 5, how would you rate this session?</string>
    <string name="field_task_name">Split your goal to small tasks</string>
    <string name="create_task">Create Task</string>
    <string name="priority">Priority</string>
    <string name="category">Category</string>
    <string name="no_task_yet">You don\'t have any tasks yet</string>
    <string name="user">User</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="job_title">Job Title</string>
    <string name="hey">Hey,</string>
    <string name="average_time_per_session">Average Time per Session</string>
    <string name="average_task_per_session">Average Task per Session</string>
    <string name="average_session_rating">Average Session Rating</string>
    <string name="you_have_unfinished_session">You Have Unfinished Session</string>
    <string name="continue_session">Continue</string>
    <string name="dummy_quote_content">You can\'t separate peace from freedom because no one can be at peace unless he has his freedom.</string>
    <string name="dummy_quote_author">Malcolm X</string>
    <string name="preparing_your_application">Preparing your application</string>
</resources>