<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical" >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginBottom="16dp"
        android:padding="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="36sp"
                    android:text="@string/hey"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/hey_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:textSize="36sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_stats"
        android:textStyle="bold"
        android:textSize="18sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">
        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="0dp"
            android:layout_height="180dp"
            card_view:cardCornerRadius="4dp"
            card_view:contentPadding="8dp"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:layout_marginVertical="8dp">
            <TextView
                android:id="@+id/info_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/average_time_per_session"
                android:gravity="center_horizontal"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="0dp"
            android:layout_height="180dp"
            card_view:cardCornerRadius="4dp"
            card_view:contentPadding="8dp"
            android:layout_weight="1"
            android:layout_marginVertical="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/average_task_per_session"
                android:gravity="center_horizontal"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="0dp"
            android:layout_height="180dp"
            card_view:cardCornerRadius="4dp"
            card_view:contentPadding="8dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginVertical="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/average_session_rating"
                android:gravity="center_horizontal"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_have_unfinished_session"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/continue_session"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textSize="18sp"
            android:gravity="end"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_relaxing_music"
        android:textStyle="bold"
        android:textSize="18sp"
        />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">
        <Button
            android:id="@+id/music_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/rain" />
        <Button
            android:id="@+id/music_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/city_traffic" />
        <Button
            android:id="@+id/music_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/waterfall" />
        <Button
            android:id="@+id/music_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/nature_forest" />
    </GridLayout>
</LinearLayout>