<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="id.ac.ui.cs.mobileprogramming.razrinn.focus.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_session"
        android:name="id.ac.ui.cs.mobileprogramming.razrinn.focus.ui.sessions.SessionListFragment"
        android:label="@string/menu_sessions"
        tools:layout="@layout/fragment_session" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="id.ac.ui.cs.mobileprogramming.razrinn.focus.ui.setting.SettingsFragment"
        android:label="@string/menu_settings" />
</navigation>