<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/session_goal_finished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Do Personal Site Project"
            android:textStyle="bold"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_marginBottom="24dp"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/play_pause_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:backgroundTint="@color/colorPrimary"
            app:srcCompat="@android:drawable/ic_media_play"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:layout_marginVertical="24dp"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pomodoro"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/long_break"
                    android:textColor="@color/colorSuccess"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/short_break"
                    android:textColor="@color/colorDanger"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/finish_session_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish_session"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_list"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/add_new_task_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add_new_task"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="end"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="You don't have any tasks yet"
            android:gravity="center"
            android:layout_marginBottom="24dp"/>
    </LinearLayout>
</ScrollView>
